// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render component 1`] = `
.c2 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  height: 24px;
  max-width: calc(100% - 4px);
}

.c2 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 >.sc-gueXAH {
  flex: 0 0 auto;
}

.c2>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c2 {
  height: 20px;
}

[data-dimension='s'] .c2>svg {
  width: 20px;
  height: 20px;
}

.c1 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: var(--admiral-border-radius-Medium, 4px);
  appearance: none;
  vertical-align: middle;
  cursor: pointer;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Button_Button1, 500);
  font-size: var(--admiral-font-size-Button_Button1, 16px);
  line-height: var(--admiral-line-height-Button_Button1, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-appearance~='primary'] {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: var(--admiral-color-Primary_Primary70, #0046E2);
  border-color: var(--admiral-color-Primary_Primary70, #0046E2);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: var(--admiral-color-Primary_Primary80, #0132B0);
  border-color: var(--admiral-color-Primary_Primary80, #0132B0);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: var(       --admiral-color-Opacity_DarkStaticHover,       #FFFFFF0F     );
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: var(       --admiral-color-Opacity_DarkStaticPress,       #FFFFFF1F     );
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: var(       --admiral-color-Special_DarkStaticNeutral30,       #4E535D     );
  color: var(--admiral-color-Special_DarkStaticNeutral30, #4E535D);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Special_DarkStaticNeutral30, #4E535D);
}

.c0[data-appearance~='danger'] {
  background-color: var(--admiral-color-Error_Error60Main, #D92020);
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Error_Error60Main, #D92020);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: var(--admiral-color-Error_Error70, #BA1717);
  border-color: var(--admiral-color-Error_Error70, #BA1717);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: var(--admiral-color-Error_Error80, #981111);
  border-color: var(--admiral-color-Error_Error80, #981111);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='success'] {
  background-color: var(--admiral-color-Success_Success50Main, #1BA049);
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Success_Success50Main, #1BA049);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: var(--admiral-color-Success_Success60, #128238);
  border-color: var(--admiral-color-Success_Success60, #128238);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: var(--admiral-color-Success_Success70, #0B682A);
  border-color: var(--admiral-color-Success_Success70, #0B682A);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Button_Button1, 500);
  font-size: var(--admiral-font-size-Button_Button1, 16px);
  line-height: var(--admiral-line-height-Button_Button1, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Button_Button2, 500);
  font-size: var(--admiral-font-size-Button_Button2, 14px);
  line-height: var(--admiral-line-height-Button_Button2, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
  <button
    class="c0"
    data-appearance="primary"
    data-dimension="xl"
    type="button"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    />
    <div
      class="c1"
    />
  </button>
</div>
`;

exports[`Button should render component with text 1`] = `
.c2 {
  vertical-align: top;
  display: inline-flex;
  gap: 8px;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: flex-start;
  align-items: center;
  height: 24px;
  max-width: calc(100% - 4px);
}

.c2 >* {
  display: inline-block;
  flex: 0 1 auto;
  white-space: nowrap;
}

.c2 >.sc-gueXAH {
  flex: 0 0 auto;
}

.c2>svg {
  width: 24px;
  height: 24px;
}

[data-dimension='s'] .c2 {
  height: 20px;
}

[data-dimension='s'] .c2>svg {
  width: 20px;
  height: 20px;
}

.c1 {
  display: inline-block;
  width: 2px;
}

.c0 {
  position: relative;
  box-sizing: border-box;
  display: inline-block;
  white-space: nowrap;
  border: none;
  border-radius: var(--admiral-border-radius-Medium, 4px);
  appearance: none;
  vertical-align: middle;
  cursor: pointer;
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Button_Button1, 500);
  font-size: var(--admiral-font-size-Button_Button1, 16px);
  line-height: var(--admiral-line-height-Button_Button1, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-appearance~='primary'] {
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:hover {
  background-color: var(--admiral-color-Primary_Primary70, #0046E2);
  border-color: var(--admiral-color-Primary_Primary70, #0046E2);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:active {
  background-color: var(--admiral-color-Primary_Primary80, #0132B0);
  border-color: var(--admiral-color-Primary_Primary80, #0132B0);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled {
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled.c0[data-appearance~='primary'].c0[data-appearance~='primary'].c0[data-appearance~='primary']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='secondary'] {
  background-color: transparent;
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: 1px solid var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'] *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:hover *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active {
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:active *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled {
  background-color: transparent;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled.c0[data-appearance~='secondary'].c0[data-appearance~='secondary'].c0[data-appearance~='secondary']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='ghost'] {
  background-color: transparent;
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border: 1px solid transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'] *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover {
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:hover *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active {
  background-color: var(--admiral-color-Opacity_Press, #0000001F);
  color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:active *[fill^='#'] {
  fill: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled {
  background-color: transparent;
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: transparent;
}

.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled.c0[data-appearance~='ghost'].c0[data-appearance~='ghost'].c0[data-appearance~='ghost']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='white'] {
  background-color: transparent;
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover {
  background-color: var(       --admiral-color-Opacity_DarkStaticHover,       #FFFFFF0F     );
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:hover *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active {
  background-color: var(       --admiral-color-Opacity_DarkStaticPress,       #FFFFFF1F     );
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border-color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:active *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled {
  border-color: var(       --admiral-color-Special_DarkStaticNeutral30,       #4E535D     );
  color: var(--admiral-color-Special_DarkStaticNeutral30, #4E535D);
}

.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'].c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled.c0[data-appearance~='white'].c0[data-appearance~='white'].c0[data-appearance~='white']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Special_DarkStaticNeutral30, #4E535D);
}

.c0[data-appearance~='danger'] {
  background-color: var(--admiral-color-Error_Error60Main, #D92020);
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Error_Error60Main, #D92020);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:hover {
  background-color: var(--admiral-color-Error_Error70, #BA1717);
  border-color: var(--admiral-color-Error_Error70, #BA1717);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:active {
  background-color: var(--admiral-color-Error_Error80, #981111);
  border-color: var(--admiral-color-Error_Error80, #981111);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled {
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'].c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled.c0[data-appearance~='danger'].c0[data-appearance~='danger'].c0[data-appearance~='danger']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0[data-appearance~='success'] {
  background-color: var(--admiral-color-Success_Success50Main, #1BA049);
  color: var(--admiral-color-Special_StaticWhite, #FFFFFF);
  border: 1px solid var(--admiral-color-Success_Success50Main, #1BA049);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'] *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:hover {
  background-color: var(--admiral-color-Success_Success60, #128238);
  border-color: var(--admiral-color-Success_Success60, #128238);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:active {
  background-color: var(--admiral-color-Success_Success70, #0B682A);
  border-color: var(--admiral-color-Success_Success70, #0B682A);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled {
  background-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
  color: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
  border-color: var(--admiral-color-Neutral_Neutral10, #E5E7EB);
}

.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'].c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success'][data-appearance~='disabled'] *[fill^='#'],
.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled.c0[data-appearance~='success'].c0[data-appearance~='success'].c0[data-appearance~='success']:disabled *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral30, #B0B5BD);
}

.c0:focus-visible {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c0[data-dimension='xl'] {
  padding: 0;
  height: 56px;
  padding: 0 29px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Button_Button1, 500);
  font-size: var(--admiral-font-size-Button_Button1, 16px);
  line-height: var(--admiral-line-height-Button_Button1, 24px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

.c0[data-dimension='l'] {
  height: 48px;
  padding: 0 21px;
}

.c0[data-dimension='m'] {
  height: 40px;
  padding: 0 17px;
}

.c0[data-dimension='s'] {
  height: 32px;
  padding: 0 13px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Button_Button2, 500);
  font-size: var(--admiral-font-size-Button_Button2, 14px);
  line-height: var(--admiral-line-height-Button_Button2, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
  <button
    class="c0"
    data-appearance="primary"
    data-dimension="xl"
    type="button"
  >
    <div
      class="c1"
    />
    <div
      class="c2"
    >
      <div>
        Button
      </div>
    </div>
    <div
      class="c1"
    />
  </button>
</div>
`;
